--- a/src/Demo/MetricMQTT.cls
+++ b/src/Demo/MetricMQTT.cls
@@ -3,6 +3,8 @@ Class Demo.MetricMQTT Extends Ens.BusinessMetric
 
 Parameter ADAPTER = "EnsLib.MQTT.Adapter.Inbound";
 
+Parameter HISTORY = 50
+
 Property BPM As Ens.DataType.Metric(AUTOHISTORY = 50) [ MultiDimensional ];
 
 Method OnProcessInput(pInput As EnsLib.MQTT.Message, pOutput As %RegisteredObject) As %Status
@@ -20,5 +22,19 @@ Method OnCalculateMetrics() As %Status
     #; $$$TRACE("testing")
     return $$$OK
 }
-
+ClassMethod OnGetInstances(ByRef pInstSet As %String) As %Status
+{   
+    For i=1:1:#HISTORY {
+        
+    }
+    
+	Set pInstSet(1) = "Apples"
+	Set pInstSet(2) = "Bananas"
+	Set pInstSet(3) = "Cherries"
+	Set pInstSet(4) = "Dates"
+	Set pInstSet(5) = "Eggplants"
+	Set pInstSet(6) = "Figs"
+	
+	Quit $$$OK
+}
 }
