working on dynamic SQL

--- a/src/Demo/KPIImpl.cls
+++ b/src/Demo/KPIImpl.cls
@@ -6,10 +6,10 @@ XData KPI [ XMLNamespace = "http://www.intersystems.com/deepsee/kpi" ]
 <kpi xmlns="http://www.intersystems.com/deepsee/kpi"
  name="KPIImpl" sourceType="sql"
  caption="MyCaption"
- sql="SELECT * from (SELECT TOP 20 * from Demo.HeartRate WHERE PatientID = 'Patient-0' ORDER BY TimeStamp DESC) ORDER BY TimeStamp ASC"
+ sql="SELECT * from (SELECT TOP 1 BPM, TimeStamp from Demo.HeartRate WHERE PatientID = 'Patient-0' ORDER BY TimeStamp DESC) ORDER BY TimeStamp ASC"
 >
-<property name="BPM" displayName="BPM" columnNo="2"/>
-<property name="TimeStamp" displayName="Time" columnNo="5"/>
+<property name="BPM" displayName="BPM" columnNo="1"/>
+<property name="TimeStamp" displayName="Time" columnNo="2"/>
 </kpi>
 }
 
