--- a/src/Demo/MetricMQTT.cls
+++ b/src/Demo/MetricMQTT.cls
@@ -3,9 +3,9 @@ Class Demo.MetricMQTT Extends Ens.BusinessMetric
 
 Parameter ADAPTER = "EnsLib.MQTT.Adapter.Inbound";
 
-Parameter HISTORY = 50
+Parameter HISTORY = 50;
 
-Property BPM As Ens.DataType.Metric(AUTOHISTORY = 50) [ MultiDimensional ];
+Property BPM As Ens.DataType.Metric;
 
 Method OnProcessInput(pInput As EnsLib.MQTT.Message, pOutput As %RegisteredObject) As %Status
 {
@@ -22,19 +22,21 @@ Method OnCalculateMetrics() As %Status
     #; $$$TRACE("testing")
     return $$$OK
 }
+
 ClassMethod OnGetInstances(ByRef pInstSet As %String) As %Status
-{   
-    For i=1:1:#HISTORY {
-        
+{
+   
+    SET tStatement = ##class(%SQL.Statement).%New()
+    SET qStatus = tStatement.%Prepare("select distinct patientID from Demo.HeartRate" )
+    SET rset = tStatement.%Execute()
+   
+    while (rset.%Next()) {
+        w rset.BPM
     }
     
-	Set pInstSet(1) = "Apples"
-	Set pInstSet(2) = "Bananas"
-	Set pInstSet(3) = "Cherries"
-	Set pInstSet(4) = "Dates"
-	Set pInstSet(5) = "Eggplants"
-	Set pInstSet(6) = "Figs"
+
 	
 	Quit $$$OK
 }
+
 }
