--- a/src/Demo/MetricMQTT.cls
+++ b/src/Demo/MetricMQTT.cls
@@ -1,42 +1,28 @@
 Class Demo.MetricMQTT Extends Ens.BusinessMetric
 {
 
-Parameter ADAPTER = "EnsLib.MQTT.Adapter.Inbound";
-
 Parameter HISTORY = 50;
 
 Property BPM As Ens.DataType.Metric;
 
-Method OnProcessInput(pInput As EnsLib.MQTT.Message, pOutput As %RegisteredObject) As %Status
-{
-   
-    #; Set temp = $GET(..BPM) + pInput.StringValue
-    Set tSC = ##class(Ens.BusinessMetric).SetMetric("testServices","BPM",pInput.StringValue)
-    set st = ..SendRequestAsync("Demo.EKGRouter",pInput)
-	Quit ..CalculateMetrics()
-}
-
 Method OnCalculateMetrics() As %Status
 {
-    #; Set ..BPM = $GET(..BPM) + bp
-    #; $$$TRACE("testing")
+    set patient = ..%Instance
+
+    // find recent sales using SQL
+     &SQL(SELECT TOP 1 BPM INTO :bpm
+              FROM Demo.HeartRate
+              WHERE PatientID = :patient ORDER BY TimeStamp DESC)
+    
+    set ..BPM = bpm
+
     return $$$OK
 }
 
-ClassMethod OnGetInstances(ByRef pInstSet As %String) As %Status
+/// Return current list of product names
+Query MetricInstances() As %SQLQuery
 {
-   
-    SET tStatement = ##class(%SQL.Statement).%New()
-    SET qStatus = tStatement.%Prepare("select distinct patientID from Demo.HeartRate" )
-    SET rset = tStatement.%Execute()
-   
-    while (rset.%Next()) {
-        w rset.BPM
-    }
-    
-
-	
-	Quit $$$OK
+  select distinct patientID from Demo.HeartRate
 }
 
 }
