--- a/src/Solution/MQTTMessageToReading.cls
+++ b/src/Solution/MQTTMessageToReading.cls
@@ -1,4 +1,4 @@
-Class Demo.EnsMessageToReading Extends Ens.DataTransformDTL [ DependsOn = (EnsLib.MQTT.Message, Demo.HeartRate) ]
+Class Solution.MQTTMessageToReading Extends Ens.DataTransformDTL [ DependsOn = (EnsLib.MQTT.Message, Solution.HeartRate) ]
 {
 
 Parameter IGNOREMISSINGSOURCE = 1;
@@ -9,10 +9,9 @@ Parameter TREATEMPTYREPEATINGFIELDASNULL = 0;
 
 XData DTL [ XMLNamespace = "http://www.intersystems.com/dtl" ]
 {
-<transform sourceClass='EnsLib.MQTT.Message' targetClass='Demo.HeartRate' create='new' language='objectscript' >
+<transform sourceClass='EnsLib.MQTT.Message' targetClass='Solution.HeartRate' create='new' language='objectscript' >
 <assign value='..Piece(source.Topic,"/",4)' property='target.PatientID' action='set' />
 <assign value='source.StringValue' property='target.BPM' action='set' />
-<assign value='..Lookup("Providers",target.PatientID)' property='target.Provider' action='set' />
 </transform>
 }
 
