got docker-compose working

--- a/Setup.cls
+++ b/Setup.cls
@@ -1,7 +1,9 @@
-class Setup {
+Class Setup.Init
+{
 
-ClassMethod Initialize(DockerCompose) As %Status
-{       do $System.OBJ.Load("/opt/app/Installer.cls","ck")
+ClassMethod Initialize(DockerCompose As %Boolean = 0) As %Status
+{
+       do $System.OBJ.Load("/opt/app/Installer.cls","ck")
         set st = ##class(App.Installer).setup()
         zn "INTEROP"
         set namespace = $ZNspace
@@ -9,20 +11,25 @@ ClassMethod Initialize(DockerCompose) As %Status
         set app = $System.CSP.GetDefaultApp(namespace) _ "/"
 	do EnableDeepSee^%SYS.cspServer(app)
         
-        set StudentID = ##class(%SYSTEM.Util).GetEnviron("AVL_STUDENT_ID")
-        if DockerCompose {
-                set StudentID = "Student_" _ $Random(100)
-                
+        
+        if DockerCompose=0 {
+               set StudentID = ##class(%SYSTEM.Util).GetEnviron("AVL_STUDENT_ID")
+               Do file.WriteLine("let SessionID = "_""""_StudentID_"""") 
+               set pSettings("From_EKG_MQTT","Adapter", "Topic")= StudentID _ "/acmeHospital/EKG/#"
+                                
         }
-        Set file=##class(%File).%New("/datavol/script.js")
-        do file.Open("w")
-        do file.WriteLine("let sessionID = "_StudentID)
-
-        set pSettings("From_EKG_MQTT","Adapter", "Topic")= StudentID _ "/acmeHospital/EKG/#"
+       
+        
         set st =##class(Solution.MQTT).ApplySettings("Solution.MQTT", .pSettings)
         return $$$OK
 }
+
+ClassMethod DockerInit() As %Status
+{
+       
+        set StudentID = "Student_" _ $Random(100)
+        Set file=##class(%File).%New("/datavol/config.js")
+        Do file.Open("WSN")
 }
 
-
-
+}
