--- a/src/Solution/MQTT.cls
+++ b/src/Solution/MQTT.cls
@@ -12,7 +12,7 @@ XData ProductionDefinition
   <Item Name="From_EKG_MQTT" Category="" ClassName="EnsLib.MQTT.Service.Passthrough" PoolSize="1" Enabled="true" Foreground="false" Comment="" LogTraceEvents="false" Schedule="">
     <Setting Target="Host" Name="TargetConfigNames">Process_MQTT_Request</Setting>
     <Setting Target="Adapter" Name="Topic">/acmeHospital/EKG/#</Setting>
-    <Setting Target="Adapter" Name="Url">tcp://mqtt:1883</Setting>
+    <Setting Target="Adapter" Name="Url">tcp://mqtt.eclipse.org:1883</Setting>
   </Item>
   <Item Name="Process_MQTT_Request" Category="" ClassName="Solution.ProcessMQTTMessage" PoolSize="1" Enabled="true" Foreground="false" Comment="" LogTraceEvents="false" Schedule="">
   </Item>
