--- a/Setup.cls
+++ b/Setup.cls
@@ -1,35 +1,65 @@
 Class Setup.Init
 {
 
-ClassMethod Initialize(DockerCompose As %Boolean = 0) As %Status
+ClassMethod Initialize() As %Status
 {
-       do $System.OBJ.Load("/opt/app/Installer.cls","ck")
+        do $System.OBJ.Load("/opt/app/Installer.cls","ck")
         set st = ##class(App.Installer).setup()
+        $$$ThrowOnError(st)
         zn "INTEROP"
         set namespace = $ZNspace
-        set st = $System.OBJ.LoadDir("/opt/app/src", "ck", ,1)
+        set st = $System.OBJ.LoadDir("/opt/app/src/", "ck", ,1)
+        $$$ThrowOnError(st)
         set app = $System.CSP.GetDefaultApp(namespace) _ "/"
 	do EnableDeepSee^%SYS.cspServer(app)
         
-        
-        if DockerCompose=0 {
-               set StudentID = ##class(%SYSTEM.Util).GetEnviron("AVL_STUDENT_ID")
-               Do file.WriteLine("let SessionID = "_""""_StudentID_"""") 
-               set pSettings("From_EKG_MQTT","Adapter", "Topic")= StudentID _ "/acmeHospital/EKG/#"
-                                
-        }
-       
-        
-        set st =##class(Solution.MQTT).ApplySettings("Solution.MQTT", .pSettings)
         return $$$OK
+}
+
+ClassMethod InitializeLearningLab() As %Status
+{
+
+        zn "INTEROP"
+        set st = ##class(Ens.Director).StopProduction()
+        $$$ThrowOnError(st)
+        set st = $System.OBJ.LoadDir("/home/project/shared/Samples-MQTT-EKG-Devices", "ck", ,1)
+         $$$ThrowOnError(st)
+        set namespace = $ZNspace
+        set app = $System.CSP.GetDefaultApp(namespace) _ "/"
+
+	do EnableDeepSee^%SYS.cspServer(app)
+
+
+        set StudentID = ##class(%SYSTEM.Util).GetEnviron("AVL_STUDENT_ID")
+        set StudentID = $Piece(StudentID, "@", 1)
+        
+        set pSettings("From_EKG_MQTT","Adapter", "Topic")= StudentID _ "/acmeHospital/EKG/#"
+        set st =##class(Solution.MQTT).ApplySettings("Solution.MQTT", .pSettings)
+        
+
+        
+        Set file=##class(%File).%New("/home/project/shared/Samples-MQTT-EKG-Devices/config.js")
+        Do file.Open("WSN")
+        $$$ThrowOnError(st)
+        Do file.WriteLine("let SessionID = "_""""_StudentID_"""")
+
+        write !,!,!, "You have successfully initialed the MQTT exercise", ! 
+        write "Please take note of your topic top-level string: " _StudentID _ "/acmeHospital/EKG/#"
 }
 
 ClassMethod DockerInit() As %Status
 {
        
         set StudentID = "Student_" _ $Random(100)
+
+        set pSettings("From_EKG_MQTT","Adapter", "Topic")= StudentID _ "/acmeHospital/EKG/#"
+        set st =##class(Solution.MQTT).ApplySettings("Solution.MQTT", .pSettings)
         Set file=##class(%File).%New("/datavol/config.js")
         Do file.Open("WSN")
+        Do file.WriteLine("let SessionID = "_""""_StudentID_"""")
+
+        write "You have successfully initialed the MQTT exercise", ! 
+        write "Please take note of your topic top-level string: " _StudentID _ "/acmeHospital/EKG/#"
 }
 
 }
