--- a/src/Solution/MQTTMessageToReading.cls
+++ b/src/Solution/MQTTMessageToReading.cls
@@ -10,7 +10,7 @@ Parameter TREATEMPTYREPEATINGFIELDASNULL = 0;
 XData DTL [ XMLNamespace = "http://www.intersystems.com/dtl" ]
 {
 <transform sourceClass='EnsLib.MQTT.Message' targetClass='Solution.HeartRate' create='new' language='objectscript' >
-<assign value='..Piece(source.Topic,"/",4)' property='target.PatientID' action='set' />
+<assign value='..Piece(source.Topic,"/","*")' property='target.PatientID' action='set' />
 <assign value='source.StringValue' property='target.BPM' action='set' />
 </transform>
 }
