Added comments and improved code style

--- a/src/Solution/Dashboard.cls
+++ b/src/Solution/Dashboard.cls
@@ -1,5 +1,5 @@
 Include %DeepSee
-
+/// Dashboard XML, should be viewed in the analytics interface.
 Class Solution.Dashboard Extends %DeepSee.UserLibrary.Container [ Not ProcedureBlock ]
 {
 
