--- a/src/Demo/HeartRate.cls
+++ b/src/Demo/HeartRate.cls
@@ -1,31 +1,14 @@
-Class Demo.HeartRate Extends (Ens.Response, %Populate)
+
+/// Production response class. Target of data transformation
+/// that converts from MQTT topic and payload into a persistent object.
+Class Demo.HeartRate Extends (Ens.Response)
 {
 
 Property PatientID As %String;
 
 Property BPM As %Integer;
 
+// Initialize all HeartRate objects with a timestamp.
 Property TimeStamp As %DateTime [ InitialExpression = {$ZDATETIME($ZTIMESTAMP)} ];
-
-Storage Default
-{
-<Data name="HeartRateDefaultData">
-<Subscript>"HeartRate"</Subscript>
-<Value name="1">
-<Value>PatientID</Value>
-</Value>
-<Value name="2">
-<Value>Provider</Value>
-</Value>
-<Value name="3">
-<Value>BPM</Value>
-</Value>
-<Value name="4">
-<Value>TimeStamp</Value>
-</Value>
-</Data>
-<DefaultData>HeartRateDefaultData</DefaultData>
-<Type>%Storage.Persistent</Type>
-}
 
 }
