--- a/src/Solution/HeartRate.cls
+++ b/src/Solution/HeartRate.cls
@@ -1,3 +1,6 @@
+
+/// Production response class. Target of data transformation
+/// that converts from MQTT topic and payload into a persistent object.
 Class Solution.HeartRate Extends (Ens.Response, %Populate)
 {
 
@@ -5,27 +8,8 @@ Property PatientID As %String;
 
 Property BPM As %Integer;
 
+// Initialize all HeartRate objects with a timestamp.
 Property TimeStamp As %DateTime [ InitialExpression = {$ZDATETIME($ZTIMESTAMP)} ];
 
-Storage Default
-{
-<Data name="HeartRateDefaultData">
-<Subscript>"HeartRate"</Subscript>
-<Value name="1">
-<Value>PatientID</Value>
-</Value>
-<Value name="2">
-<Value>Provider</Value>
-</Value>
-<Value name="3">
-<Value>BPM</Value>
-</Value>
-<Value name="4">
-<Value>TimeStamp</Value>
-</Value>
-</Data>
-<DefaultData>HeartRateDefaultData</DefaultData>
-<Type>%Storage.Persistent</Type>
-}
 
 }
