add a callout example

--- a/src/Util/BinaryHandler.cls
+++ b/src/Util/BinaryHandler.cls
@@ -3,7 +3,8 @@ Class Util.BinaryHandler
 
 ClassMethod main(file = "/datavol/share/data2.data")
 {
-	kill ^Util.RecordD
+#define loop 10000
+
 	Set stream=##class(%Stream.FileBinary).%New()
 	Set sc=stream.LinkToFile(file)
 	While 'stream.AtEnd {
@@ -11,23 +12,39 @@ ClassMethod main(file = "/datavol/share/data2.data")
 	}
 	Set stream=""  ; close the file
 
+	write "ObjectScript only",!
+	kill ^Util.RecordD
 	Set st=$ZH
-	For i=1:1:10000 { Do ..DecodeAndSave(line) }
+	For seq=1:1:$$$loop { Do ..DecodeAndSave(seq,line) }
+	W $ZH-st," seconds",!
+
+	write "CallOut",!
+	kill ^Util.RecordD
+	Set st=$ZH
+	For seq=1:1:$$$loop { Do ..DecodeAndSaveCO(seq,line) }
 	W $ZH-st," seconds",!
 }
 
-ClassMethod DecodeAndSave(line)
+ClassMethod DecodeAndSave(seq, line)
 {
-	#;事前に内容がFloat64*1000個の単純な配列とわかっていると仮定。
+#define elementcount 1000
+	#;事前に内容がdouble(8バイト)*1000個の単純な配列とわかっていると仮定。
 	#;バイナリ処理のために$LIST構造を使用。扱えるのはIEEE64, Integer。
-	Set bin=""
-	For i=0:1:999 {
-		#; Float64(IEEE64)のハンドリング
-		Set data=$E(line,i*8+1,i*8+8) Set bin=bin_$C(10)_$C(8)_data
+	Set list=""
+	For i=0:1:$$$elementcount-1 {
+		#; IEEE doubleのハンドリング
+		#; 引数lineから、オフセットをずらしながら各要素(8バイト)を取得しdataに格納
+		Set data=$Extract(line,i*8+1,i*8+8) 
+		#; バイナリをLIST構造として保存
+		Set list=list_$C(10)_$C(8)_data
 	}
-	#; Globalセットは計測時の環境の影響によるブレが大きいので、ローカル変数にセットすることで代替えする。
-	Set ^Util.RecordD($INCREMENT(^Util.RecordD))=bin
-	#;Set test($INCREMENT(test))=$LISTBUILD("")_bin
+	Set ^Util.RecordD($INCREMENT(^Util.RecordD))=list
+}
+
+ClassMethod DecodeAndSaveCO(seq, line)
+{
+	#;事前に内容がdouble(8バイト)*1000個の単純な配列とわかっていると仮定。
+	Set tSC=$ZF(-3,"/home/irisowner/src/callout.so","Decode",seq,line)
 }
 
 }
