--- a/src/Solution/MQTT.cls
+++ b/src/Solution/MQTT.cls
@@ -10,17 +10,19 @@ XData ProductionDefinition
   <Item Name="Solution.MetricMQTT" Category="" ClassName="Solution.MetricMQTT" PoolSize="1" Enabled="true" Foreground="false" Comment="" LogTraceEvents="false" Schedule="">
     <Setting Target="Adapter" Name="CallInterval">1</Setting>
   </Item>
-  <Item Name="From_EKG_MQTT" Category="" ClassName="EnsLib.MQTT.Service.Passthrough" PoolSize="1" Enabled="true" Foreground="false" Comment="" LogTraceEvents="false" Schedule="">
+  <Item Name="From_EKG_MQTT" Category="" ClassName="EnsLib.MQTT.Service.Passthrough" PoolSize="1" Enabled="false" Foreground="false" Comment="" LogTraceEvents="false" Schedule="">
     <Setting Target="Host" Name="TargetConfigNames">Process_MQTT_Request</Setting>
     <Setting Target="Adapter" Name="Topic">/Student_6084/acmeHospital/EKG/#</Setting>
     <Setting Target="Adapter" Name="Url">tcp://mqtt.eclipseprojects.io:1883</Setting>
   </Item>
-  <Item Name="From_EKG_MQTT_CC" Category="" ClassName="Solution.BS.MQTT" PoolSize="1" Enabled="false" Foreground="false" Comment="" LogTraceEvents="false" Schedule="">
-    <Setting Target="Host" Name="TargetConfigNames">Process_MQTT_Request</Setting>
+  <Item Name="From_EKG_MQTT_CC" Category="" ClassName="Solution.BS.MQTT" PoolSize="1" Enabled="true" Foreground="false" Comment="" LogTraceEvents="false" Schedule="">
+    <Setting Target="Host" Name="TargetConfigNames">Process_MQTT_Request_DOTNET</Setting>
     <Setting Target="Adapter" Name="Topic">/Student_6084/acmeHospital/EKG/#</Setting>
     <Setting Target="Adapter" Name="Url">tcp://mqtt.eclipseprojects.io:1883</Setting>
   </Item>
   <Item Name="Process_MQTT_Request" Category="" ClassName="Solution.ProcessMQTTMessage" PoolSize="1" Enabled="true" Foreground="false" Comment="" LogTraceEvents="false" Schedule="">
+  </Item>
+  <Item Name="Process_MQTT_Request_DOTNET" Category="" ClassName="Solution.BP.NoOp" PoolSize="1" Enabled="true" Foreground="false" Comment="" LogTraceEvents="false" Schedule="">
   </Item>
 </Production>
 }
