--- a/src/Solution/BS/MQTT.cls
+++ b/src/Solution/BS/MQTT.cls
@@ -6,16 +6,15 @@ Property gw As %RegisteredObject;
 
 Method OnProcessInput(pInput As EnsLib.MQTT.Message, pOutput As %RegisteredObject) As %Status
 {
-	#dim iTarget As %Integer
-	#dim tOneTarget As %String
-	#dim tSyncCommit As %Integer
-
-	#dim tSC,tSC1 As %Status = $$$OK
+	#dim tSC As %Status = $$$OK
 	#dim e As %Exception.AbstractException
 	
 	Try {
 
 		$$$LOGINFO("Topic:"_pInput.Topic_" Value:"_pInput.StringValue)
+		#; log raw data to a global for debugging purpose
+		Set ^log($INCREMENT(^log))=pInput.StringValue
+
 		#; Do something in .NET
 		$$$LOGINFO(..gw.new("System.DateTime",0).Now)
 		set proxy = ..gw.new("dc.MyLibrary")
